<resources>
    <string name="app_name">Smart Wallet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_app">Logo App</string>
    <string name="sign_up_free">Đăng ký miễn phí</string>
    <string name="sign_up">Đăng ký</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="slogan_1">Quản lý tài chính thông minh</string>
    <string name="slogan">slogan</string>
    <string name="bannerImage">bannerImage</string>
    <string name="slogan_2">Tất cả trong một</string>
    <string name="slogan_3">Thông tin của bạn luôn bảo mật</string>
    <string name="login">Đăng nhập</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_apple">Login with Apple</string>
    <string name="or">hoặc</string>
    <string name="username">Tài khoản:</string>
    <string name="password">Mật khẩu:</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="home">Tổng quan</string>
    <string name="account">Tài khoản</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="wallet">Ví</string>
    <string name="transaction">Giao dịch</string>
    <string name="statistic">Thống kê</string>
    <string name="blank">Blank</string>
    <string name="balance">Tổng số dư:</string>
    <string name="unknow_balance">**********</string>
    <string name="expense_report">Báo cáo chi tiêu</string>
    <string name="view_report">Xem báo cáo</string>
    <string name="most_transaction">Chi tiêu nhiều nhất</string>
    <string name="view_recently_transaction">Xem tất cả</string>
    <string name="add_transaction_vi">Thêm giao dịch</string>
    <string name="price">Số tiền</string>
    <string name="vnd">VNĐ</string>
    <string name="_000000">000000</string>
    <string name="select_category">Chọn phân loại</string>
    <string name="input_detail">Nhập chi tiết</string>
    <string name="input_date">Nhập ngày</string>
    <string name="add">Thêm</string>
    <string name="cancel">Huỷ</string>
    <string name="select_date">Chọn ngày tháng</string>
    <string name="select_wallet">Chọn ví</string>
    <string name="income">Thu</string>
    <string name="outcome">Chi</string>
    <string name="_00">00</string>
    <string name="mm_yyyy">MM/yyyy</string>
    <string name="show_icon">show Icon</string>
    <string name="category">Phân loại</string>
    <string name="detail">Chi tiết</string>
    <string name="hh_mm">hh:mm</string>
    <string name="edit">Sửa</string>
    <string name="delete">Xoá</string>
    <string name="update_transaction_vi">Sửa giao dịch</string>
    <string name="save">Lưu</string>
    <string name="monthYear">Tháng năm</string>
    <string name="total_paid">Tổng đã chi tháng này </string>
    <string name="up_down"> tăng/giảm</string>
    <string name="overview">Tổng quan</string>
    <string name="most_category_index">1</string>
    <string name="no_data">Không có dữ liệu</string>
    <string name="manage">Quản lý</string>
    <string name="manage_wallet">Ví của tôi</string>
    <string name="manage_category">Danh mục của tôi</string>
    <string name="my_wallet">Ví của tôi</string>
    <string name="update_wallet_vi">Sửa ví</string>
    <string name="current_price">Số tiền hiện có</string>
    <string name="wallet_name">Tên</string>
    <string name="add_new_wallet">Thêm ví mới</string>
    <string name="plus">+</string>
    <string name="transaction_detail">Chi tiết giao dịch</string>
    <string name="date_time">Ngày tháng năm</string>
    <string name="wallet_detail">Thông tin ví</string>
    <string name="my_category">Danh mục</string>
    <string name="add_new_category">Thêm danh mục mới</string>
    <string name="input_category_name">Nhập tên danh mục</string>
    <string name="search_transaction">Tìm kiếm giao dịch</string>
    <string name="email">Email</string>
    <string name="version">Version v1.0</string>
    <string name="account_information">Thông tin tài khoản</string>
    <string name="log_out">Đăng xuất</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="current_password">Mật khẩu hiện tại</string>
    <string name="re_input_new_pass">Nhập lại mật khẩu mới</string>
    <string name="update">Cập nhật</string>
    <string name="report">Báo cáo</string>
    <string name="income_amount">Khoản thu</string>
    <string name="amount">TextView</string>
    <string name="outcome_amount">Khoản chi</string>
</resources>