<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutTransactionItem"
    android:layout_marginTop="5dp"
    android:layout_marginStart="5dp"
    android:layout_marginBottom="5dp"
    android:layout_marginEnd="15dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/layoutDateTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/layoutDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/_00"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/textViewTextMonthYear"
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:text="@string/mm_yyyy"
            android:textSize="14sp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/textViewHourMinute"
            android:layout_width="21dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/hh_mm"
            android:textAlignment="viewStart"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/textViewWallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/wallet"
            android:textAlignment="viewEnd"
            tools:ignore="RtlCompat" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutDateTime">

        <ImageView
            android:id="@+id/imageViewIcon"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/show_icon"
            android:padding="5dp"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@drawable/up_arrow" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/_000000"
            android:textAlignment="viewEnd"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>