<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reportLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.TransactionReportFragment">


    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monthYear"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/unknow_balance"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewDate" />

    <TextView
        android:id="@+id/textViewTotalPaidTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_paid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPrice" />

    <TextView
        android:id="@+id/textViewTotalPaidValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/up_down"
        app:layout_constraintStart_toEndOf="@+id/textViewTotalPaidTitle"
        app:layout_constraintTop_toBottomOf="@id/textViewPrice" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chartReportByMonth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTotalPaidTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>