<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutAddTransaction"
    android:layout_width="match_parent"
    android:layout_margin="6dp"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewWalletDetailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wallet_detail"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/layoutInputMoney"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />

    <LinearLayout
        android:id="@+id/layoutInputName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/layoutInputMoney"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWalletDetailTitle"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageViewIcon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/blank"
            android:src="@drawable/wallet"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/editTextInputDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:text="@string/wallet_name"
            android:textSize="18sp"
            tools:ignore="VisualLintTextFieldSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/layoutInputMoney"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/layoutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutInputName"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageViewCurrency"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/blank"
            android:src="@drawable/baseline_attach_money_24"
            app:tint="@color/gray_bold" />

        <TextView
            android:id="@+id/editTextNumberDecimal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/_000000"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutInputMoney">

        <Button
            android:id="@+id/buttonEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:backgroundTint="@color/green_special"
            android:text="@string/edit"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/red"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonEdit"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>